--- a/tmux.conf
+++ b/tmux.conf
@@ -5,3 +5,8 @@ set -g default-terminal "screen-256color"
 set -g status-bg red
 set -g status-fg white
 set -g status-justify centre
+set -g status-left "#I"
+set -g status-right "#P"
+
+set -g mouse-select-pane on
+set -g mouse-select-window on
