--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,9 @@
+new-session
 set status-utf8 on
 set utf8 on
 set -g default-terminal "screen-256color"
 
-set -g status-bg red
+set -g status-bg blue
 set -g status-fg white
 set -g status-justify centre
 set -g status-left "#I"
