--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,12 @@
-new-session
 set status-utf8 on
 set utf8 on
 set -g default-terminal "screen-256color"
 
-set -g status-bg blue
+set-option -g bell-action any
+
+set-window-option -g mode-keys vi
+
+set -g status-bg red
 set -g status-fg white
 set -g status-justify centre
 set -g status-left "#I"
@@ -11,3 +14,7 @@ set -g status-right "#P"
 
 set -g mouse-select-pane on
 set -g mouse-select-window on
+
+set -g aggressive-resize on
+
+set -sg escape-time 0
