Fix tmux files.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+new-session
+
 set status-utf8 on
 set utf8 on
 set -g default-terminal "screen-256color"
@@ -6,7 +8,7 @@ set-option -g bell-action any
 
 set-window-option -g mode-keys vi
 
-set -g status-bg red
+set -g status-bg "#222222"
 set -g status-fg white
 set -g status-justify centre
 set -g status-left "#I"
@@ -16,5 +18,9 @@ set -g mouse-select-pane on
 set -g mouse-select-window on
 
 set -g aggressive-resize on
+
+set-option -g default-shell /usr/bin/fish
+
+set -g mode-mouse on
 
 set -sg escape-time 0
