--- a/tmux.conf
+++ b/tmux.conf
@@ -1,26 +1,24 @@
-new-session
-
 set status-utf8 on
 set utf8 on
-set -g default-terminal "screen-256color"
-
 set-option -g bell-action any
-
 set-window-option -g mode-keys vi
-
+set -sg escape-time 0
+set -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm:colors=256'
 set -g status-bg "#222222"
 set -g status-fg white
 set -g status-justify centre
-set -g status-left "#I"
-set -g status-right "#P"
-
+set -g status-left " #S : #I"
+set -g status-right "#P "
 set -g mouse-select-pane on
 set -g mouse-select-window on
-
 set -g aggressive-resize on
 
-set-option -g default-shell /usr/bin/fish
-
-set -g mode-mouse on
-
-set -sg escape-time 0
+bind r source-file ~/.tmux.conf
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind @ command-prompt "new-session -s '%%'"
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
