Tmux kill session command.

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,5 +24,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind r source-file ~/.tmux.conf
+bind X command-prompt "kill-session -t '%%'"
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
