--- a/tmux.conf
+++ b/tmux.conf
@@ -8,8 +8,8 @@ set -g mouse-select-window on
 set -g status-bg "#222222"
 set -g status-fg white
 set -g status-justify centre
-set -g status-left " #S : #I"
-set -g status-right "#P "
+set -g status-left " #S : #I : #P "
+set -g status-right "#(date +'%a %D %r') "
 set -g terminal-overrides 'xterm:colors=256'
 set -sg escape-time 0
 set status-utf8 on
