Tmux default path.

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,10 @@ set-option -g bell-action any
 set-option -g default-shell /usr/bin/fish
 set-window-option -g mode-keys vi
 
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 bind @ command-prompt "new-session -s '%%'"
 bind h select-pane -L
 bind j select-pane -D
