--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,10 @@ set -g default-terminal "screen-256color"
 set -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-select-window on
-set -g status-bg "#222222"
-set -g status-fg white
+# set -g status-bg "#222222"
+# set -g status-fg white
+set -g status-bg colour232
+set -g status-fg colour14
 set -g status-justify centre
 set -g status-left " #S : #I : #P "
 set -g status-right "#(date +'%a %D %r') "
@@ -17,10 +19,6 @@ set utf8 on
 set-option -g bell-action any
 set-option -g default-shell /usr/bin/fish
 set-window-option -g mode-keys vi
-
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
 
 bind @ command-prompt "new-session -s '%%'"
 bind h select-pane -L
