Fix tmux default dir.

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@ set -g mouse-select-pane on
 set -g mouse-select-window on
 # set -g status-bg "#222222"
 # set -g status-fg white
-set -g status-bg colour232
+set -g status-bg colour0
 set -g status-fg colour14
 set -g status-justify centre
 set -g status-left " #S : #I : #P "
@@ -29,3 +29,7 @@ bind r source-file ~/.tmux.conf
 bind X command-prompt "kill-session -t '%%'"
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
