--- a/tmux.conf
+++ b/tmux.conf
@@ -1,26 +1,30 @@
-new-session
-
-set -g aggressive-resize on
+# Options
+setw -g aggressive-resize on
+set -g display-time 4000
 set -g default-terminal "screen-256color"
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-# set -g status-bg "#222222"
-# set -g status-fg white
-set -g status-bg colour0
-set -g status-fg colour14
+set -g focus-events on
+set -g mouse-utf8 on
+set -g mouse on
+set -g status-bg "#3c3836"
+set -g status-fg "#ebdbb2"
+set -g pane-border-fg "#3c3836"
+set -g pane-active-border-fg "#3c3836"
 set -g status-justify centre
 set -g status-left " #S : #I : #P "
 set -g status-right "#(date +'%a %D %r') "
 set -g terminal-overrides 'xterm:colors=256'
 set -sg escape-time 0
-set status-utf8 on
-set utf8 on
 set-option -g bell-action any
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/bin/zsh
 set-window-option -g mode-keys vi
 
+# Bindings
+unbind C-b
+set -g prefix C-f
+bind C-f send-prefix
 bind @ command-prompt "new-session -s '%%'"
+bind v split-window -v
+bind V split-window -h
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -29,3 +33,7 @@ bind r source-file ~/.tmux.conf
 bind X command-prompt "kill-session -t '%%'"
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
+# Plugins
+# set -g @plugin 'tmux-plugins/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
