--- a/i3/config
+++ b/i3/config
@@ -3,6 +3,7 @@
 # Additional useful tools:
 # nitrogen: wallpaper manager
 # lxappearance: gtk setup
+# xfce4-power-manager: laptop power functions
 
 set $mod Mod4
 
@@ -14,17 +15,16 @@ hide_edge_borders both
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier Mod1
 
-# start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
-
-# kill focused window
+# Kill focused window.
 bindsym $mod+Shift+c kill
 
 # Application shortcuts.
+bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+y exec chromium
 bindsym $mod+e exec emacsclient -c -a ""
-bindsym $mod+s exec skype
+# bindsym $mod+s exec skype
 bindsym $mod+t exec thunar
+bindsym $mod+semicolon exec slock
 
 # Application classes.
 for_window [class="Thunar"] floating enable
@@ -34,16 +34,20 @@ for_window [class="Emacs"] floating enable
 # start dmenu (a program launcher)
 bindsym $mod+o exec dmenu_run
 
-# change focus
+# Change focus.
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 bindsym $mod+n workspace next_on_output
 bindsym $mod+p workspace prev_on_output
-bindsym $mod+semicolon focus right
 
-# Rotate workspace on next monitor
+# Change transparency.
+bindsym $mod+0 exec transset-df -a
+bindsym $mod+minus exec transset-df -a --dec 0.125
+bindsym $mod+plus exec transset-df -a --inc 0.125
+
+# Rotate workspace on next monitor.
 bindsym $mod+period focus output right; workspace next_on_output; focus output left
 bindsym $mod+comma focus output right; workspace prev_on_output; focus output left
 
@@ -69,9 +73,8 @@ bindsym $mod+v split h
 bindsym $mod+m fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-# bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-# bindsym $mod+e layout toggle split
+bindsym $mod+s layout tabbed
+bindsym $mod+d layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+f floating toggle
@@ -82,10 +85,10 @@ bindsym $mod+button3 floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+# bindsym $mod+a focus parent
 
 # focus the child container
-bindsym $mod+d focus child
+# bindsym $mod+d focus child
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -129,6 +132,6 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+        mode hide
         status_command i3status
 }
-
