--- a/i3/config
+++ b/i3/config
@@ -1,96 +1,31 @@
-# Chris Laverdiere i3 Config
+# Chris Laverdiere's i3 Config
 #
 # Additional useful tools:
-# nitrogen: wallpaper manager
+# compton and transset-df: compositing and transparency
 # lxappearance: gtk setup
+# nitrogen: wallpaper manager
+# parcellite: unified clipboard
 # xfce4-power-manager: laptop power functions
+#
+# Optional deps:
+# https://github.com/proxypoke/quickswitch-for-i3
+# > pip install i3-py quickswitch-i3
+
+
+# --- Settings --- #
 
 set $mod Mod4
-
-# Window options
+floating_modifier Mod1
 font pango:DejaVu Sans Mono 8
 new_window pixel 1
 hide_edge_borders both
+workspace_auto_back_and_forth yes
 
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier Mod1
 
-# Kill focused window.
-bindsym $mod+Shift+c kill
+# --- Maps --- #
 
-# Application shortcuts.
-bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+y exec chromium
-bindsym $mod+e exec emacsclient -c -a ""
-# bindsym $mod+s exec skype
-bindsym $mod+t exec thunar
-bindsym $mod+semicolon exec slock
-
-# Application classes.
-for_window [class="Thunar"] floating enable
-for_window [class="Skype"] floating enable
-for_window [class="Emacs"] floating enable
-
-# start dmenu (a program launcher)
-bindsym $mod+o exec dmenu_run
-
-# Change focus.
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
-bindsym $mod+n workspace next_on_output
-bindsym $mod+p workspace prev_on_output
-
-# Change transparency.
+# Modmaps
 bindsym $mod+0 exec transset-df -a
-bindsym $mod+minus exec transset-df -a --dec 0.125
-bindsym $mod+plus exec transset-df -a --inc 0.125
-
-# Rotate workspace on next monitor.
-bindsym $mod+period focus output right; workspace next_on_output; focus output left
-bindsym $mod+comma focus output right; workspace prev_on_output; focus output left
-
-# move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-# split in horizontal orientation
-bindsym $mod+c split v
-
-# split in vertical orientation
-bindsym $mod+v split h
-
-# enter fullscreen mode for the focused container
-bindsym $mod+m fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout tabbed
-bindsym $mod+d layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+f floating toggle
-bindsym button3 floating toggle
-bindsym $mod+button3 floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-# bindsym $mod+a focus parent
-
-# focus the child container
-# bindsym $mod+d focus child
-
-# switch to workspace
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
 bindsym $mod+3 workspace 3
@@ -100,9 +35,28 @@ bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
-
-# move focused container to workspace
+bindsym $mod+button3 floating toggle
+bindsym $mod+comma focus output right; workspace prev_on_output; focus output left
+bindsym $mod+c split v
+bindsym $mod+d layout toggle split
+bindsym $mod+e exec emacsclient -c -a ""
+bindsym $mod+f exec quickswitch.py
+bindsym $mod+h focus left
+bindsym $mod+i exec quickswitch.py -m
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
+bindsym $mod+m fullscreen toggle
+bindsym $mod+minus exec transset-df -a --dec 0.125
+bindsym $mod+n workspace next_on_output
+bindsym $mod+o exec dmenu_run -b -i -l 20
+bindsym $mod+period focus output right; workspace next_on_output; focus output left
+bindsym $mod+plus exec transset-df -a --inc 0.125
+bindsym $mod+p workspace prev_on_output
+bindsym $mod+r mode "resize"
+bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+semicolon exec slock
+bindsym $mod+Shift+0 move container to workspace 10
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
 bindsym $mod+Shift+3 move container to workspace 3
@@ -112,11 +66,38 @@ bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
-
-bindsym $mod+Shift+x reload
+bindsym $mod+Shift+c kill
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Exit i3?' -b 'Yes' 'i3-msg exit'"
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+x reload
+bindsym $mod+s layout tabbed
+bindsym $mod+space floating toggle
+bindsym $mod+t exec thunar
+bindsym $mod+u exec urxvt -hold -e sh -c 'sudo pacman -Syu && echo Done!'
+bindsym $mod+v split h
+bindsym $mod+y exec chromium
+
+# Mouse maps
+bindsym button3 floating toggle
+
+# Volume key maps
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+
+
+# --- Application classes --- #
+
+for_window [class="Thunar"] floating enable
+for_window [class="Skype"] floating enable
+for_window [title="opengl test demo"] floating enable
+
+
+# --- Modes --- #
 
 mode "resize" {
         bindsym h resize shrink width 5 px or 5 ppt
@@ -127,11 +108,11 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# --- i3bar Config --- #
+
 bar {
         mode hide
         status_command i3status
+        font pango:DejaVu Sans Mono 10
 }
