--- a/i3/config
+++ b/i3/config
@@ -79,6 +79,7 @@ bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
+bindsym $mod+Shift+p focus parent
 bindsym $mod+Shift+period move workspace to output right
 bindsym $mod+Shift+r restart
 bindsym $mod+Shift+x reload
@@ -88,8 +89,9 @@ bindsym $mod+space floating toggle
 bindsym $mod+t exec thunar
 bindsym $mod+u exec urxvt -hold -e sh -c 'sudo pacman -Syu && echo Done!'
 bindsym $mod+v split h
-bindsym $mod+x exec xfce4-screenshooter
+bindsym $mod+x exec xkill
 bindsym $mod+y exec chromium
+bindsym $mod+z exec xfce4-screenshooter
 bindsym $mod+slash exec cr
 
 # Mouse maps
