--- a/tmux.conf
+++ b/tmux.conf
@@ -3,37 +3,48 @@ setw -g aggressive-resize on
 set -g display-time 4000
 set -g default-terminal "screen-256color"
 set -g focus-events on
-set -g mouse-utf8 on
 set -g mouse on
-set -g status-bg "#3c3836"
-set -g status-fg "#ebdbb2"
 set -g pane-border-fg "#3c3836"
 set -g pane-active-border-fg "#3c3836"
-set -g status-justify centre
-set -g status-left " #S : #I : #P "
-set -g status-right "#(date +'%a %D %r') "
 set -g terminal-overrides 'xterm:colors=256'
 set -sg escape-time 0
 set-option -g bell-action any
 set-option -g default-shell /usr/bin/zsh
 set-window-option -g mode-keys vi
 
+# Status bar
+set -g status off
+# set -g status-bg "#3c3836"
+# set -g status-fg "#ebdbb2"
+# set -g status-justify centre
+# set -g status-left " #S : #I : #P "
+# set -g status-right "#(date +'%a %D %r') "
+
 # Bindings
 unbind C-b
 set -g prefix C-f
 bind C-f send-prefix
 bind @ command-prompt "new-session -s '%%'"
-bind v split-window -v
-bind V split-window -h
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind v split-window -h
+bind V split-window -v
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
 bind r source-file ~/.tmux.conf
 bind X command-prompt "kill-session -t '%%'"
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
+# Uncomment for vim window-movement integration.
+# is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+# bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+# bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+# bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+# bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+
 # Plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+run '~/.tmux/plugins/tpm/tpm'
+
