Add git mergetool settings

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -31,3 +31,11 @@
 
 [interactive]
 	diffFilter = diff-highlight
+
+[merge]
+	tool = vimdiff
+	conflictstyle = diff3
+	prompt = false
+
+[mergetool]
+	keepBackup = false
