--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -109,7 +109,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 for_window [class="Thunar"] floating enable
 for_window [class="Skype"] floating enable
 for_window [class="mpv"] floating enable
-for_window [title="opengl test demo"] floating enable
+for_window [title="Opengl Demo"] floating enable
 for_window [title="transcribe"] floating enable
 
 
