--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -114,6 +114,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 
 # --- Application classes --- #
 
+for_window [class="Pidgin"] floating enable
 for_window [class="Thunar"] floating enable
 for_window [class="Skype"] floating enable
 for_window [class="mpv"] floating enable
