Add pylint ignores

--- a/pylint/.pylintrc
+++ b/pylint/.pylintrc
@@ -1,2 +1,5 @@
 [MESSAGES CONTROL]
-disable=R,C,F0401,W0511,W0102,W0603
+disable=R,C,F0401,W0511,W0102,W0603,E1136
+
+[TYPECHECK]
+generated-members=pb_*,zmq
