--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -186,5 +186,5 @@ bar {
 client.background #111111
 client.focused #ff9955 #005f87 #F9F9F9 #111111 #444444
 client.focused_inactive #dddddd #dddddd #666666 #DDDDDD #005F87
-client.unfocused #dddddd #dddddd #666666 #DDDDDD #005F87
+client.unfocused #cccccc #cccccc #666666 #cccccc #005F87
 client.urgent #4A4A4A #4A4A4A #FDFDFD #FDFDFD #4A4A4A
