--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,8 +25,10 @@ unbind C-b
 set -g prefix C-f
 bind C-f send-prefix
 bind @ command-prompt "new-session -s '%%'"
+bind c new-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind V split-window -v -c "#{pane_current_path}"
+bind g split-window -h -c "#{pane_current_path}" "git-fuzzy log"
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -35,6 +37,8 @@ bind C-h select-pane -L
 bind C-j select-pane -D
 bind C-k select-pane -U
 bind C-l select-pane -R
+bind C-n next-window
+bind C-p previous-window
 bind r source-file ~/.tmux.conf
 bind X command-prompt "kill-session -t '%%'"
 bind-key -n C-S-Left swap-window -t -1
