--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,6 +39,7 @@ bind C-k select-pane -U
 bind C-l select-pane -R
 bind C-n next-window
 bind C-p previous-window
+bind C-s command-prompt "swap-pane -s %%"
 bind r source-file ~/.tmux.conf
 bind X command-prompt "kill-session -t '%%'"
 bind-key -n C-S-Left swap-window -t -1
