--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,12 +1,14 @@
 # Options
 setw -g aggressive-resize on
 set -g display-time 4000
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color-italic"
 set -g focus-events on
 set -g mouse on
 set -g pane-border-style fg="#3c3836"
 set -g pane-active-border-style fg="#3c3836",bg=default
-set -g terminal-overrides 'xterm:colors=256'
+# set -g terminal-overrides 'xterm:colors=256'
+set -ga terminal-overrides ",xterm-256color*:Tc"
 set -sg escape-time 0
 set-option -g bell-action any
 set-option -g default-shell /bin/zsh
@@ -46,7 +48,6 @@ bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
