--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 # Options
 setw -g aggressive-resize on
 set -g display-time 4000
-# set -g default-terminal "screen-256color"
-set -g default-terminal "xterm-256color-italic"
+set -g default-terminal "screen-256color"
+# set -g default-terminal "xterm-256color-italic"
 set -g focus-events on
 set -g mouse on
 set -g pane-border-style fg="#3c3836"
