--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,14 +1,19 @@
 # Options
 setw -g aggressive-resize on
 set -g display-time 4000
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 # set -g default-terminal "xterm-256color-italic"
+# set -g default-terminal "xterm-kitty"
+# set -g default-terminal "xterm-256color"
+# set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+# set -ga terminal-overrides 'xterm:colors=256'
+# set -ga terminal-overrides ",xterm-256color*:Tc"
 set -g focus-events on
 set -g mouse on
 set -g pane-border-style fg="#3c3836"
 set -g pane-active-border-style fg="#3c3836",bg=default
-# set -g terminal-overrides 'xterm:colors=256'
-set -ga terminal-overrides ",xterm-256color*:Tc"
 set -sg escape-time 0
 set-option -g bell-action any
 set-option -g default-shell /bin/zsh
