--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,24 +1,134 @@
+tap "adoptopenjdk/openjdk"
+tap "datadog/tap", "git@github.com:DataDog/homebrew-tap.git"
 tap "homebrew/bundle"
 tap "homebrew/cask"
+tap "homebrew/cask-fonts"
 tap "homebrew/core"
+brew "python@3.10", link: false
+brew "ansible"
 brew "autojump"
-brew "python"
+brew "python@3.9", link: false
+brew "awscli@1"
+brew "bash"
+brew "bat"
+brew "bazelisk"
+brew "gcc"
+brew "btop"
+brew "coreutils"
+brew "direnv"
+brew "dsq"
 brew "entr"
+brew "exa"
 brew "fd"
 brew "gdb"
+brew "gh"
+brew "gimme"
 brew "git"
+brew "guile"
+brew "unbound"
+brew "gnutls"
+brew "gnupg"
+brew "go"
+brew "grc"
+brew "grep"
+brew "gron"
+brew "helm"
 brew "htop"
+brew "httpie"
+brew "hub"
+brew "hurl"
+brew "hyperscan"
+brew "imagemagick"
+brew "jd"
+brew "jq"
+brew "kubectx"
+brew "lazygit"
+brew "libpq"
+brew "libzip"
+brew "lua"
+brew "lua-language-server"
+brew "luarocks"
+brew "make"
+brew "openjdk"
+brew "maven"
+brew "moreutils"
+brew "neovim"
+brew "nghttp2"
 brew "node"
+brew "node-build"
+brew "nodenv"
+brew "openjdk@17"
+brew "pgcli"
+brew "pgformatter"
+brew "poetry"
 brew "prettier"
 brew "protobuf"
+brew "pv"
+brew "pyenv"
+brew "pyright"
+brew "ranger"
+brew "ruby-build"
+brew "rbenv"
 brew "redis"
 brew "ripgrep"
+brew "ruby"
+brew "sd"
+brew "shellcheck"
+brew "shfmt"
+brew "sl"
 brew "stow"
+brew "tctl"
+brew "terminal-notifier"
+brew "tfenv"
 brew "the_silver_searcher"
+brew "tidy-html5"
 brew "tig"
+brew "tldr"
 brew "tmux"
 brew "tree"
+brew "vale"
+brew "vault"
+brew "viddy"
 brew "vim"
+brew "watch"
 brew "wget"
+brew "xh"
+brew "yamllint"
+brew "yarn"
+brew "yq"
 brew "zsh-history-substring-search"
+brew "datadog/tap/devkube"
+brew "datadog/tap/docker-local-dev"
+brew "datadog/tap/kubectl-analyse"
+brew "datadog/tap/kubectl-iscale"
+brew "datadog/tap/kubectl-multiexec"
+brew "datadog/tap/kubectl-template"
+brew "datadog/tap/latest-artifact"
+brew "datadog/tap/latest-chart"
+brew "datadog/tap/latest-datacenter-config"
+brew "datadog/tap/latest-image"
+brew "datadog/tap/python@2"
+brew "datadog/tap/s22-checker"
+brew "datadog/tap/sce"
+brew "datadog/tap/to-prod"
+brew "datadog/tap/to-staging"
+brew "datadog/tap/trigger-ci"
+cask "adoptopenjdk14"
+cask "adoptopenjdk15"
+cask "alacritty"
+cask "aws-vault"
+cask "bzl"
 cask "calibre"
+cask "ddtool"
+cask "font-hack-nerd-font"
+cask "google-cloud-sdk"
+cask "iterm2"
+cask "kitty"
+cask "maccy"
+cask "pgadmin4"
+cask "tctl-data-converter"
+cask "tctl-local-auth"
+cask "tctx"
+cask "vagrant"
+cask "virtualbox"
+cask "visual-studio-code"
